--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <header>
-        <input type="checkbox" name="" id="toggler">
-        <label for="toggler" class="fas fa-bars"></label>
-        <a href="#" class='logo'>ABCD</a>
-        <nav class="navbar">
-            <a href="#home">Home</a>
+        <input type="checkbox" id="Hamburger">
+        <label for="Hamburger" class="fas fa-bars"></label>
+        <a href="" class='Name'>Bazaar</a>
+        <nav class="nav">
+            <a href="">Home</a>
         </nav>
-        <div class="icons">
-            <a href="#" class="fas fa-shopping-cart"></a>
-            <a href="#" class="fas fa-user"></a>
+        <div class="awesome_icons">
+            <a href="" class="fas fa-shopping-cart"></a>
+            <a href="" class="fas fa-user"></a>
         </div>
     </header>
 </body>
