Commit_the_Eighth(E-Com).

--- a/signup.html
+++ b/signup.html
@@ -50,7 +50,7 @@
                 <button type="button" class="b1">Submit</button>
                 <hr>
                 <p class="or">OR</p>
-                <p>Already have an account? <a href="index.html" target="blank"><strong>Sign-In!</strong></a></p>
+                <p>Already have an account? <a href="signin.html" target="blank"><strong>Sign-In!</strong></a></p>
             </form>
         </div>
     </section>
