--- a/signin.html
+++ b/signin.html
@@ -38,7 +38,7 @@
                 <button type="button" class="b1">Submit</button>
                 <hr>
                 <p class="or">OR</p>
-                <p>Don't have an account? <a href="signup.html" target="blank"><strong>Sign-up!</strong></a></p>
+                <p>Don't have an account? <a href="signup.html"><strong>Sign-up!</strong></a></p>
     
             </form>
         </div>
