Commit_the_Tenth(E-Com).

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 
     <header>
-        <input type="checkbox" name="" id="toggler">
-        <label for="toggler" class="fas fa-bars"></label>
-        <a href="index.html" class="logo"><span>Bazaar</a></span></a>
+        <input type="checkbox" id="name_press">
+        <label for="name_press" class="fas fa-bars"></label>
+        <a href="index.html" class="Name"><span>Bazaar</a></span></a>
 
         <nav class="navbar">
             <a href="index.html"><i class="fa fa-home"></i> Home</a>
@@ -27,20 +27,18 @@
     </header>
 
 
-
-
-    <section class="products" id="products">
-        <h1 class="heading">Latest <span>Products</span></h1>
-        <div class="box-container">
+    <section class="lp" id="lp">
+        <h1 class="h">Latest Products</h1>
+        <div class="products">
             <div class="box">
                 <div class="image">
                     <img src="images/chromebooks.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic laptop</h3>
+                    <h3>Generic Laptop</h3>
                     <div class="price">₹25,000</div>
                 </div>
             </div>
@@ -48,24 +46,24 @@
                 <div class="image">
                     <img src="images/smartwatches.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic watch</h3>
-                    <div class="price">₹4000</div>
+                    <h3>Generic Watch</h3>
+                    <div class="price">₹4,999</div>
                 </div>
             </div>
             <div class="box">
                 <div class="image">
                     <img src="images/speaker.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic speaker</h3>
-                    <div class="price">₹8000</div>
+                    <h3>Generic Speaker</h3>
+                    <div class="price">₹8,000</div>
                 </div>
             </div>
             <div class="box">
@@ -73,12 +71,12 @@
                 <div class="image">
                     <img src="images/tshirt.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic t-shirt</h3>
-                    <div class="price">₹800 <span>₹1000</span></div>
+                    <h3>Generic T-Shirt</h3>
+                    <div class="price">₹800 <span>₹1,000</span></div>
                 </div>
             </div>
 
@@ -86,12 +84,12 @@
                 <div class="image">
                     <img src="images/shoes.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic shoes</h3>
-                    <div class="price">₹1000</div>
+                    <h3>Generic Shoes</h3>
+                    <div class="price">₹1,000</div>
                 </div>
             </div>
 
@@ -101,12 +99,12 @@
                 <div class="image">
                     <img src="images/jacket.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic jacket</h3>
-                    <div class="price">₹2210 <span>₹2600</span></div>
+                    <h3>Generic Jacket</h3>
+                    <div class="price">₹2,210 <span>₹2,600</span></div>
                 </div>
             </div>
 
@@ -114,12 +112,12 @@
                 <div class="image">
                     <img src="images/mobile.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic mobile</h3>
-                    <div class="price">₹45,000</div>
+                    <h3>Generic Mobile</h3>
+                    <div class="price">₹44,999</div>
                 </div>
             </div>
 
@@ -127,12 +125,119 @@
                 <div class="image">
                     <img src="images/jewellery.jpg" alt="">
                     <div class="icons">
-                        <a href="" class="cart-btn">Add to Cart</a>
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
                     </div>
                 </div>
                 <div class="content">
-                    <h3>generic jewellery</h3>
-                    <div class="price">₹33,000</div>
+                    <h3>Generic Jewellery</h3>
+                    <div class="price">₹33,999</div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/books.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Generic Books</h3>
+                    <div class="price">₹1,599</div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">Flat 35% off</span>
+                <div class="image">
+                    <img src="images/cutlery.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Assorted Cutlery</h3>
+                    <div class="price">₹974.35 <span>₹1499</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/handbag.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Generic Handbag</h3>
+                    <div class="price">₹6,999</div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">Flat 28% off</span>
+                <div class="image">
+                    <img src="images/microwave.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Generic Microwave</h3>
+                    <div class="price">₹4,175.28 <span>₹5,799</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/router.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Generic router</h3>
+                    <div class="price">₹7,999</div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/sofa.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Generic Sofa Set</h3>
+                    <div class="price">₹21,799</div>
+                </div>
+            </div>
+
+            <div class="box">
+                <span class="discount">Flat 20% off</span>
+                <div class="image">
+                    <img src="images/trimmer.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Generic Jacket</h3>
+                    <div class="price">₹1,279.20 <span>₹1,599</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="images/usb.jpg" alt="">
+                    <div class="icons">
+                        <a href="cart.html" class="cart-btn">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>Generic Charging Cable</h3>
+                    <div class="price">₹599</div>
                 </div>
             </div>
 
@@ -142,7 +247,7 @@
 
 
     <section class="footer">
-        <div class="box-container">
+        <div class="info">
             <div class="box">
                 <h3>Shortcuts</h3>
                 <a href="index.html">Home</a>
@@ -154,8 +259,8 @@
 
             <div class="box">
                 <h3>Contact Us</h3>
-                <a href="">+91-99999 99999</a>
-                <a href="">customer.care@bazaar.com</a>
+                <a href="">Call Center : +91-99999 99999</a>
+                <a href="">Email : customer.care@bazaar.com</a>
             </div>
         </div>
         <div class="credit"> &lt/&gt with <i class="fas fa-heart"></i> by <span>WarMachine0502</span> </div>
