--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,23 +10,23 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Sign-Up</title>
 </head>
+
 <body>
     <header>
-
-        <input type="checkbox" name="" id="toggler">
-        <label for="toggler" class="fas fa-bars"></label>
-
-        <a href="#" class="logo"><span>Bazaar</span></a>
+        <input type="checkbox" id="name_press">
+        <label for="name_press" class="fas fa-bars"></label>
+        <a href="index.html" class="Name"><span>Bazaar</a></span></a>
 
         <nav class="navbar">
             <a href="index.html"><i class="fa fa-home"></i> Home</a>
             <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a>
             <a href="signin.html"><i class="fa fa-user"></i> Sign-In</a>
         </nav>
+
     </header>
 
     <section class="form">
-        <h1 class="heading" id="heading_2">Sign-In</h1>
+        <h1 class="h">Sign-Up</h1>
         <div class="formbox2">
             <img src="images/userIcon.png" alt="User Icon">
             <form>
@@ -54,5 +55,22 @@
             </form>
         </div>
     </section>
+    <section class="footer">
+        <div class="info">
+            <div class="box">
+                <h3>Shortcuts</h3>
+                <a href="index.html">Home</a>
+                <a href="cart.html">Cart</a>
+                <a href="signin.html">Sign-In</a>
+            </div>
+            <div class="box">
+                <h3>Contact Us</h3>
+                <a href="">Call Center : +91-99999 99999</a>
+                <a href="">Email : customer.care@bazaar.com</a>
+            </div>
+        </div>
+        <div class="credit"> &lt/&gt with <i class="fas fa-heart"></i> by <span>WarMachine0502</span> </div>
+    </section>
 </body>
+
 </html>
