--- a/signin.html
+++ b/signin.html
@@ -15,7 +15,7 @@
     <header>
         <input type="checkbox" id="name_press">
         <label for="name_press" class="fas fa-bars"></label>
-        <a href="index.html" class="Name"><span>Bazaar</a></span></a>
+        <a href="index.html" class="Name"><span>Pethia</a></span></a>
 
         <nav class="navbar">
             <a href="index.html"><i class="fa fa-home"></i> Home</a>
