Commit_the_Twelfth(E-Com).

--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
     </header>
     <section class="cart" id="cart">
         <h1 class="h">Cart</h1>
-        <div class="cart-page">
+        <div class="structure">
             <table>
                 <tr>
                     <th>Product</th>
@@ -35,7 +35,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="cart-info">
+                        <div class="cart_products">
                             <img src="images/speaker.jpg" alt="">
                             <div>
                                 <p>Generic Speaker</p>
@@ -47,7 +47,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="cart-info">
+                        <div class="cart_products">
                             <img src="images/mobile.jpg" alt="">
                             <div>
                                 <p>Generic Mobile</p>
@@ -59,7 +59,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="cart-info">
+                        <div class="cart_products">
                             <img src="images/tshirt.jpg" alt="">
                             <div>
                                 <p>Generic T-Shirt</p>
@@ -71,7 +71,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="cart-info">
+                        <div class="cart_products">
                             <img src="images/chromebooks.jpg" alt="">
                             <div>
                                 <p>Generic Laptop</p>
@@ -83,7 +83,7 @@
                 </tr>
             </table>
 
-            <div class="total-price">
+            <div class="price">
                 <table>
                     <tr>
                         <td>SubTotal</td>
