--- a/cart.html
+++ b/cart.html
@@ -118,7 +118,12 @@
                 <a href="">Email : customer.care@bazaar.com</a>
             </div>
         </div>
-        <div class="credit"> &lt/&gt with <i class="fas fa-heart"></i> by <span>WarMachine0502</span> </div>
+        <div class="credit">
+            &lt/&gt with <span><i class="fas fa-heart"></i></span> by <span>WarMachine0502</span> | <a
+                href="https://www.instagram.com/" class="fab fa-instagram"></a> <a href="https://www.twitter.com/"
+                class="fab fa-twitter"></a> <a href="https://www.google.com/" class="fab fa-google"></a> <a
+                href="https://www.youtube.com/" class="fab fa-youtube"></a>
+        </div>
     </section>
 </body>
 
