--- a/signup.html
+++ b/signup.html
@@ -63,13 +63,21 @@
                 <a href="cart.html">Cart</a>
                 <a href="signin.html">Sign-In</a>
             </div>
+
+
+
             <div class="box">
                 <h3>Contact Us</h3>
                 <a href="">Call Center : +91-99999 99999</a>
                 <a href="">Email : customer.care@bazaar.com</a>
             </div>
         </div>
-        <div class="credit"> &lt/&gt with <i class="fas fa-heart"></i> by <span>WarMachine0502</span> </div>
+        <div class="credit">
+            &lt/&gt with <span><i class="fas fa-heart"></i></span> by <span>WarMachine0502</span> | <a
+                href="https://www.instagram.com/" class="fab fa-instagram"></a> <a href="https://www.twitter.com/"
+                class="fab fa-twitter"></a> <a href="https://www.google.com/" class="fab fa-google"></a> <a
+                href="https://www.youtube.com/" class="fab fa-youtube"></a>
+        </div>
     </section>
 </body>
 
