--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
             
         </div>
         <div class="credit">
-            &lt/&gt with <span><i class="fas fa-heart"></i></span> by <span>WarMachine0502</span><br><br><a
-                href="https://www.instagram.com/" class="fab fa-instagram"></a> <a href="https://www.twitter.com/"
-                class="fab fa-twitter"></a> <a href="https://www.google.com/" class="fab fa-google"></a> <a
+            <span>&lt/&gt</span> with <span><i class="fas fa-heart"></i></span> by <span>WarMachine0502</span><br><br><a
+                href="https://www.instagram.com/" class="fab fa-instagram"></a> | <a href="https://www.twitter.com/"
+                class="fab fa-twitter"></a> | <a href="https://www.google.com/" class="fab fa-google"></a> | <a
                 href="https://www.youtube.com/" class="fab fa-youtube"></a>
         </div>
     </section>
