--- a/cart.html
+++ b/cart.html
@@ -121,7 +121,7 @@
         <div class="credit">
             <span>&lt/&gt</span> with <span><i class="fas fa-heart"></i></span> by <span>WarMachine0502</span><br><br><a
                 href="https://www.instagram.com/" class="fab fa-instagram"></a> | <a href="https://www.twitter.com/"
-                class="fab fa-twitter"></a> | <a href="https://www.google.com/" class="fab fa-google"></a> | <a
+                class="fab fa-twitter"></a> | <a href="https://www.facebook.com/" class="fab fa-facebook"></a> | <a
                 href="https://www.youtube.com/" class="fab fa-youtube"></a>
         </div>
     </section>
