--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <input type="checkbox" id="name_press">
         <label for="name_press" class="fas fa-bars"></label>
-        <a href="index.html" class="Name"><span>Pethia</a></span></a>
+        <a href="index.html" class="Name"><span>P</span>e<span>t</span>h<span>i</span>a</a>
 
         <nav class="navbar">
             <a href="index.html"><i class="fa fa-home"></i> Home</a>
@@ -244,8 +244,6 @@
         </div>
     </section>
 
-
-
     <section class="footer">
         <div class="info">
             <div class="box">
@@ -266,7 +264,7 @@
         <div class="credit">
             <span>&lt/&gt</span> with <span><i class="fas fa-heart"></i></span> by <span>WarMachine0502</span><br><br><a
                 href="https://www.instagram.com/" class="fab fa-instagram"></a> | <a href="https://www.twitter.com/"
-                class="fab fa-twitter"></a> | <a href="https://www.google.com/" class="fab fa-google"></a> | <a
+                class="fab fa-twitter"></a> | <a href="https://www.facebook.com/" class="fab fa-facebook"></a> | <a
                 href="https://www.youtube.com/" class="fab fa-youtube"></a>
         </div>
     </section>
