--- a/cart.html
+++ b/cart.html
@@ -28,11 +28,15 @@
         <h1 class="h">Cart</h1>
         <div class="structure">
             <table>
+                <thead>
                 <tr>
                     <th>Product</th>
                     <th>Quantity</th>
                     <th>Amount</th>
                 </tr>
+                </thead>
+
+                <tbody>
                 <tr>
                     <td>
                         <div class="cart_products">
@@ -81,6 +85,7 @@
                     <td><input type="number" value="1" class="a"></td>
                     <td>₹25,000</td>
                 </tr>
+                </tbody>
             </table>
 
             <div class="price">
