Commit_the_Nineteenth(E-Com).

--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
 
     <section class="form">
         <h1 class="h">Sign-Up</h1>
-        <div class="formbox2">
+        <div class="formbox">
             <img src="images/userIcon.png" alt="User Icon">
             <form>
                 <label>E-mail:</label>
