Commit_the_Twenty_First(E-Com).

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 
     </header>
 
+    
 
     <section class="lp" id="lp">
-        <h1 class="h">Latest Products</h1>
+        <h1 class="h2">Latest Products</h1>
         <div class="products">
             <div class="box">
                 <div class="image">
