--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
 
     </header>
     <section class="cart" id="cart">
-        <h1 class="h">Cart</h1>
+        <h1 class="h2">Cart</h1>
         <div class="structure">
             <table>
                 <thead>
