--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
 
     </header>
 
-    
+    <section class="home" id="home">
+
+        <div class="content">
+            <h3>The only place you need to go</h3>
+            <span>For all your shopping needs.</span>
+            <p>Come and traverse through the largest range of products on the web,<br>with Pethia.</p>
+            <a href="" class="btn">Explore</a>
+        </div>
+        
+
+    </section>
 
     <section class="lp" id="lp">
-        <h1 class="h2">Latest Products</h1>
+        <h1 class="h">Latest Products</h1>
         <div class="products">
             <div class="box">
                 <div class="image">
@@ -249,15 +259,15 @@
         <div class="info">
             <div class="box">
                 <h3>Shortcuts</h3>
-                <a href="index.html">Home</a>
-                <a href="cart.html">Cart</a>
-                <a href="signin.html">Sign-In</a>
+                <a href="index.html"><i class="fa fa-home"></i> Home</a>
+                <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a>
+                <a href="signin.html"><i class="fa fa-user"></i> Sign-In</a>
             </div>
 
             <div class="box">
-                <h3>Social</h3>
-                <a href="">Call Center : +91-99999 99999</a>
-                <a href="">Email : customer.care@bazaar.com</a>
+                <h3>Contact Us</h3>
+                <a href=""><i class="fas fa-phone fa-rotate-90"></i> : +91-99999 99999</a>
+                <a href=""><i class="fas fa-envelope"></i> : customer.care@bazaar.com</a>
             </div>
 
 
