--- a/signup.html
+++ b/signup.html
@@ -59,15 +59,15 @@
         <div class="info">
             <div class="box">
                 <h3>Shortcuts</h3>
-                <a href="index.html">Home</a>
-                <a href="cart.html">Cart</a>
-                <a href="signin.html">Sign-In</a>
+                <a href="index.html"><i class="fa fa-home"></i> Home</a>
+                <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a>
+                <a href="signin.html"><i class="fa fa-user"></i> Sign-In</a>
             </div>
 
             <div class="box">
-                <h3>Social</h3>
-                <a href="">Call Center : +91-99999 99999</a>
-                <a href="">Email : customer.care@bazaar.com</a>
+                <h3>Contact Us</h3>
+                <a href=""><i class="fas fa-phone fa-rotate-90"></i> : +91-99999 99999</a>
+                <a href=""><i class="fas fa-envelope"></i> : customer.care@bazaar.com</a>
             </div>
 
 
