--- a/signin.html
+++ b/signin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon2.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon2.ico" type="image/x-icon">
     <title>Sign-In</title>
 </head>
 
