Commit_the_Twenty_Sixth(E-Com).

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h3>The only place you need to go</h3>
             <span>For all your shopping needs.</span>
             <p>Come and traverse through the largest range of products on the web,<br>with Pethia.</p>
-            <a href="" class="btn">Explore</a>
+            <a href="#lp" class="btn">Explore</a>
         </div>
         
 
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Laptop</h3>
+                    <h3><a href="#" class="name_link">Generic Laptop</a></h3>
                     <div class="price">₹25,000</div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Watch</h3>
+                    <h3><a href="#" class="name_link">Generic Watch</a></h3>
                     <div class="price">₹4,999</div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Speaker</h3>
+                    <h3><a href="#" class="name_link">Generic Speaker</a></h3>
                     <div class="price">₹8,000</div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic T-Shirt</h3>
+                    <h3><a href="#" class="name_link">Generic T-Shirt</a></h3>
                     <div class="price">₹800 <span>₹1,000</span></div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Shoes</h3>
+                    <h3><a href="#" class="name_link">Generic Shoes</a></h3>
                     <div class="price">₹1,000</div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Jacket</h3>
+                    <h3><a href="#" class="name_link">Generic Jacket</a></h3>
                     <div class="price">₹2,210 <span>₹2,600</span></div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Mobile</h3>
+                    <h3><a href="#" class="name_link">Generic Mobile</a></h3>
                     <div class="price">₹44,999</div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Jewellery</h3>
+                    <h3><a href="#" class="name_link">Generic Jewellery</a></h3>
                     <div class="price">₹33,999</div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Books</h3>
+                    <h3><a href="#" class="name_link">Assorted Books</a></h3>
                     <div class="price">₹1,599</div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Assorted Cutlery</h3>
+                    <h3><a href="#" class="name_link">Assorted Cutlery</a></h3>
                     <div class="price">₹974.35 <span>₹1499</span></div>
                 </div>
             </div>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Handbag</h3>
+                    <h3><a href="#" class="name_link">Generic Handbag</a></h3>
                     <div class="price">₹6,999</div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Microwave</h3>
+                    <h3><a href="#" class="name_link">Generic Microwave Oven</a></h3>
                     <div class="price">₹4,175.28 <span>₹5,799</span></div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic router</h3>
+                    <h3><a href="#" class="name_link">Generic Router</a></h3>
                     <div class="price">₹7,999</div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Sofa Set</h3>
+                    <h3><a href="#" class="name_link">Generic Sofa Set</a></h3>
                     <div class="price">₹21,799</div>
                 </div>
             </div>
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Jacket</h3>
+                    <h3><a href="#" class="name_link">Generic Jacket</a></h3>
                     <div class="price">₹1,279.20 <span>₹1,599</span></div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Generic Charging Cable</h3>
+                    <h3><a href="#" class="name_link">Generic Charging Cable</a></h3>
                     <div class="price">₹599</div>
                 </div>
             </div>
@@ -262,6 +262,7 @@
                 <a href="index.html"><i class="fa fa-home"></i> Home</a>
                 <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a>
                 <a href="signin.html"><i class="fa fa-user"></i> Sign-In</a>
+                <a href="#top"><i class="fa fa-arrow-circle-up"></i> Go to Top</a>
             </div>
 
             <div class="box">
