--- a/signup.html
+++ b/signup.html
@@ -62,6 +62,7 @@
                 <a href="index.html"><i class="fa fa-home"></i> Home</a>
                 <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a>
                 <a href="signin.html"><i class="fa fa-user"></i> Sign-In</a>
+                <a href="#top"><i class="fa fa-arrow-circle-up"></i> Go to Top</a>
             </div>
 
             <div class="box">
