--- a/signin.html
+++ b/signin.html
@@ -48,16 +48,16 @@
         <div class="info">
             <div class="box">
                 <h3>Shortcuts</h3>
-                <a href="index.html"><i class="fa fa-home"></i> Home</a>
-                <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a>
-                <a href="signin.html"><i class="fa fa-user"></i> Sign-In</a>
-                <a href="#top"><i class="fa fa-arrow-circle-up"></i> Go to Top</a>
+                <a href="index.html"><i class="fa fa-home"></i> <span>Home</span></a>
+                <a href="cart.html"><i class="fa fa-shopping-cart"></i> <span>Cart</span></a>
+                <a href="signin.html"><i class="fa fa-user"></i> <span>Sign-In</span></a>
+                <a href="#top"><i class="fa fa-arrow-circle-up"></i> <span>Go to Top</span></a>
             </div>
 
             <div class="box">
                 <h3>Contact Us</h3>
-                <a href=""><i class="fas fa-phone fa-rotate-90"></i> : +91-99999 99999</a>
-                <a href=""><i class="fas fa-envelope"></i> : customer.care@bazaar.com</a>
+                <a href=""><i class="fas fa-phone fa-rotate-90"></i> : <span>+91-99999 99999</span></a>
+                <a href=""><i class="fas fa-envelope"></i> : <span>customer.care@bazaar.com</span></a>
             </div>
 
 
