Commit_the_Twenty_Ninth(E-Com).

--- a/signup.html
+++ b/signup.html
@@ -59,16 +59,16 @@
         <div class="info">
             <div class="box">
                 <h3>Shortcuts</h3>
-                <a href="index.html"><i class="fa fa-home"></i> <span>Home</span></a>
-                <a href="cart.html"><i class="fa fa-shopping-cart"></i> <span>Cart</span></a>
-                <a href="signin.html"><i class="fa fa-user"></i> <span>Sign-In</span></a>
-                <a href="#top"><i class="fa fa-arrow-circle-up"></i> <span>Go to Top</span></a>
+                <a href="index.html"><i class="fa fa-home"></i>&nbsp;<span>Home</span></a>
+                <a href="cart.html"><i class="fa fa-shopping-cart"></i>&nbsp;<span>Cart</span></a>
+                <a href="signin.html"><i class="fa fa-user"></i>&nbsp;<span>Sign-In</span></a>
+                <a href="#top"><i class="fa fa-arrow-circle-up"></i>&nbsp;<span>Go to Top</span></a>
             </div>
 
             <div class="box">
                 <h3>Contact Us</h3>
-                <a href=""><i class="fas fa-phone fa-rotate-90"></i> : <span>+91-99999 99999</span></a>
-                <a href=""><i class="fas fa-envelope"></i> : <span>customer.care@bazaar.com</span></a>
+                <a href=""><i class="fas fa-phone fa-rotate-90"></i>&nbsp;:&nbsp;<span>+91-99999 99999</span></a>
+                <a href=""><i class="fas fa-envelope"></i>&nbsp;:&nbsp;<span>customer.care@bazaar.com</span></a>
             </div>
 
 
